fixed layout issue with footer

--- a/css/index.css
+++ b/css/index.css
@@ -213,7 +213,7 @@ body {
 }
 .footer {
   width: 100%;
-  height: 35%;
+  height: 250px;
   margin: 0 auto;
   background-color: #888888;
   line-height: 2.4rem;
@@ -221,6 +221,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  padding-top: 45px;
 }
 .footer h2 {
   font-size: 2.0rem;
@@ -352,11 +353,11 @@ body {
 }
 .selectors {
   margin-top: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 .options-button {
-  width: 18.3rem;
-  height: 4.9rem;
+  width: 100%;
+  height: 130%;
   font-weight: 700;
   font-size: 1.6rem;
   color: black;
