--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 35%;
+  height: 250px;
   margin: 0 auto;
   background-color: #888888;
   line-height: 2.4rem;
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  padding-top:45px;
 
   h2 {
     font-size:2.0rem;
