--- a/less/services.less
+++ b/less/services.less
@@ -30,12 +30,12 @@
 
 .selectors {
   margin-top: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 
 .options-button {
-  width: 18.3rem;
-  height: 4.9rem;
+  width: 100%;
+  height: 130%;
   font-weight: 700;
   font-size: 1.6rem;
   color: black;
